<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">
    <!--tools:showIn="@layout/activity_main"-->

    <LinearLayout
        style="@style/questionTheme">

        <CheckBox
            android:id="@+id/checkbox5_1"
            style="@style/choiceTheme"
            android:text="@string/ans5_1" />

        <CheckBox
            android:id="@+id/checkbox5_2"
            style="@style/choiceTheme"
            android:text="@string/ans5_2" />

        <CheckBox
            android:id="@+id/checkbox5_3"
            style="@style/choiceTheme"
            android:text="@string/ans5_3" />

        <CheckBox
            android:id="@+id/checkbox5_4"
            style="@style/choiceTheme"
            android:text="@string/ans5_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/note" />
    </LinearLayout>

</FrameLayout>