<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.flaviodepedis.mathquiz.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/numQuestions"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="....."
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="30dp">

        <include layout="@layout/question1" />

        <include layout="@layout/question2" />

        <include layout="@layout/question3" />

        <include layout="@layout/question4" />

        <include layout="@layout/question5" />

        <include layout="@layout/question6" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:onClick="submitAnswer"
            android:text="@string/btnAnswer" />

    </RelativeLayout>

</LinearLayout>
